--- a/WebApI/WebApI/WebApI.csproj
+++ b/WebApI/WebApI/WebApI.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="wwwroot\uploads\" />
+    <Folder Include="wwwroot\Image\" />
   </ItemGroup>
 
 </Project>
