display list Images  from Sever

--- a/WebApI/WebApI/WebApI.csproj
+++ b/WebApI/WebApI/WebApI.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Resources\Images\" />
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
 
